--- a/package.json
+++ b/package.json
@@ -22,27 +22,34 @@
     "yeoman-generator"
   ],
   "dependencies": {
-    "yeoman-generator": "^1.0.0",
     "chalk": "^1.1.3",
+    "lodash": "^4.17.4",
+    "ramda": "^0.23.0",
+    "yeoman-generator": "^1.0.0",
     "yosay": "^1.2.1"
   },
   "devDependencies": {
-    "yeoman-test": "^1.6.0",
-    "yeoman-assert": "^2.2.1",
     "eslint": "^3.1.1",
+    "eslint-config-airbnb-base": "^11.0.1",
     "eslint-config-xo-space": "^0.15.0",
+    "eslint-plugin-import": "^2.2.0",
     "gulp": "^3.9.0",
+    "gulp-coveralls": "^0.1.0",
     "gulp-eslint": "^3.0.1",
     "gulp-exclude-gitignore": "^1.0.0",
-    "gulp-line-ending-corrector": "^1.0.1",
     "gulp-istanbul": "^1.0.0",
+    "gulp-line-ending-corrector": "^1.0.1",
     "gulp-mocha": "^3.0.1",
-    "gulp-plumber": "^1.0.0",
     "gulp-nsp": "^2.1.0",
-    "gulp-coveralls": "^0.1.0"
+    "gulp-plumber": "^1.0.0",
+    "yeoman-assert": "^2.2.1",
+    "yeoman-test": "^1.6.0"
   },
   "eslintConfig": {
-    "extends": "xo-space",
+    "extends": [
+      "xo-space",
+      "airbnb-base"
+    ],
     "env": {
       "mocha": true
     }
@@ -50,7 +57,9 @@
   "repository": "rjhilgefort/generator-react-features",
   "scripts": {
     "prepublish": "gulp prepublish",
-    "test": "gulp"
+    "test": "gulp",
+    "lint": "eslint ./generators gulpfile.js",
+    "lint-fix": "eslint ./generators gulpfile.js --fix"
   },
   "license": "MIT"
 }
