--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chalk": "^1.1.3",
     "lodash": "^4.17.4",
     "ramda": "^0.23.0",
+    "treis": "^2.3.16",
     "yeoman-generator": "^1.0.0",
     "yosay": "^1.2.1"
   },
@@ -52,13 +53,16 @@
       "airbnb-base"
     ],
     "rules": {
-      "comma-dangle": ["error", {
-        "arrays": "always-multiline",
-        "objects": "always-multiline",
-        "imports": "always-multiline",
-        "exports": "always-multiline",
-        "functions": "never"
-      }]
+      "comma-dangle": [
+        "error",
+        {
+          "arrays": "always-multiline",
+          "objects": "always-multiline",
+          "imports": "always-multiline",
+          "exports": "always-multiline",
+          "functions": "never"
+        }
+      ]
     },
     "env": {
       "mocha": true
