--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
       "airbnb-base"
     ],
     "rules": {
+      "class-methods-use-this": 0,
       "comma-dangle": [
         "error",
         {
