--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-react-modules",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Yeoman generator for react modules architecture",
   "homepage": "",
   "author": {
@@ -9,7 +9,8 @@
     "url": "rob.hilgefort.me"
   },
   "files": [
-    "generators"
+    "generators",
+    "lib"
   ],
   "main": "generators/index.js",
   "keywords": [
