--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
           "exports": "always-multiline",
           "functions": "never"
         }
-      ]
+      ],
+      "no-underscore-dangle": 0
     },
     "env": {
       "mocha": true
